--- a/SmartMask/app/src/main/res/layout/activity_configure_values.xml
+++ b/SmartMask/app/src/main/res/layout/activity_configure_values.xml
@@ -322,16 +322,31 @@
 
     <Button
         android:id="@+id/btnValores"
-        android:layout_width="245dp"
-        android:layout_height="45dp"
+        android:layout_width="148dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="63dp"
+        android:layout_marginStart="39dp"
 
-        android:layout_marginBottom="57dp"
+        android:layout_marginBottom="51dp"
         android:background="@drawable/backgrund_bottom"
         android:text="SAVE"
+        android:textColor="#003249"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/btnrestValores"
+        android:layout_width="148dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="210dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/backgrund_bottom"
+        android:text="RESET"
         android:textColor="#003249"
         android:textSize="20sp"
         android:textStyle="bold" />
