--- a/SmartMask/app/src/main/res/layout/activity_air_quality_table.xml
+++ b/SmartMask/app/src/main/res/layout/activity_air_quality_table.xml
@@ -9,29 +9,13 @@
     <View
         android:id="@+id/view7"
         android:layout_width="0dp"
-        android:layout_height="110dp"
+        android:layout_height="200dp"
         android:background="@drawable/top_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:paddingStart="10sp"
-        android:textColor="#343a40"
-        android:text="In this table you can see all the data captured by the sensors."
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
        <!-- <TextView
@@ -67,25 +51,22 @@
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="24dp"
+        android:text="Report"
+        android:textAlignment="textEnd"
         android:textColor="#343a40"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:text="Select the date range"
-        android:textSize="34sp"
+        android:textSize="60sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtFechaInicio"
-        android:layout_width="200dp"
-        android:layout_height="35dp"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/edit_text_background"
         android:ems="10"
@@ -93,15 +74,17 @@
         android:inputType="textPersonName"
         android:onClick="openDatePicker"
         android:paddingStart="20sp"
-        android:textSize="16sp"
+        android:paddingTop="8sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintTop_toBottomOf="@+id/view7" />
 
     <TextView
         android:id="@+id/txtFechaFin"
-        android:layout_width="200dp"
-        android:layout_height="35dp"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -111,7 +94,8 @@
         android:inputType="textPersonName"
         android:onClick="finishDate"
         android:paddingStart="20sp"
-        android:textSize="16sp"
+        android:paddingTop="8sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtFechaInicio" />
@@ -137,7 +121,7 @@
         android:layout_height="match_parent"
         android:layout_marginHorizontal="15dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="310dp"
+        android:layout_marginTop="380dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
